<resources>
    <string name="app_name">Speedchecker - DemoApp</string>
    <string name="dataSharing">Data Sharing</string>
    <string name="bg_location_title">That worked!</string>
    <string name="bg_location_message">Allow the app to measure signal and network quality in background even when app is closed and not in use.</string>
    <string name="bg_location_message2">This will enable us to improve network performance in your area.</string>
    <string name="common_next">Next</string>
    <string name="welcome_title">Welcome to Speed Checker  Sample App</string>
    <string name="welcome_description">Tap the button below to get started</string>
    <string name="common_start">Start</string>
    <string name="permission_phone_allow">ALLOW</string>
    <string name="permission_phone_message2">We don’t make or manage calls.</string>
    <string name="permission_phone_title">Phone State Permission</string>
    <string name="permission_phone_message">It will allow us accurately detect network technology used in your tests.</string>
    <string name="common_dont">don’t</string>
    <string name="common_download">Download</string>
    <string name="common_unit">Mbps</string>
    <string name="common_upload">Upload</string>
    <string name="common_ping">Ping</string>
    <string name="common_jitter">Jitter</string>
    <string name="common_server">Server</string>
    <string name="common_location_type">Location type</string>
    <string name="common_connection_type">Connection type</string>
    <string name="common_start_test">Start Speed Test</string>
    <string name="test_started">Test Started</string>
    <string name="text_servers_error">Fetch server failed</string>
    <string name="test_fetch_server_progress">Finding best server</string>
    <string name="status_unknown">Unknown</string>
    <string name="status_indoor">indoor</string>
    <string name="status_outdoor">outdoor</string>
    <string name="test_finished">Test finished</string>
    <string name="common_progress">In progress</string>
    <string name="test_ping_finished">Ping finished</string>
    <string name="test_download_started">Download test started</string>
    <string name="test_download_finished">Download test finished</string>
    <string name="test_error">Test Fatal Error</string>
    <string name="test_warning">Warning</string>
    <string name="test_interrupted">Test interrupted</string>
    <string name="common_packet_loss">Loss</string>
    <string name="permission_allow_all_time">Allow all the time</string>
    <string name="location_use_precise">Use precise location</string>
</resources>
